Fixed Size for Overflowing Books

--- a/style/style.css
+++ b/style/style.css
@@ -61,10 +61,10 @@ body {
 #right {
     padding: 1rem;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    grid-template-rows: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-auto-rows: minmax(250px, max-content);
     gap: 2rem;
-    overflow: hidden;
+    overflow: auto;
     position: relative;
 }
 
@@ -88,11 +88,11 @@ body {
     display: grid;
     grid-template-rows: repeat(5, 1fr);
     border-radius: 1rem;
-    justify-content: center;
+    justify-content: start;
     align-items: start;
     border: .2rem solid rgba(255, 255, 255, .5);
     border-left: 2rem solid skyblue;
-    overflow: auto;
+    overflow: hidden;
     animation: popIn .5s ease;
 }
 
@@ -124,6 +124,7 @@ body {
 
 #read {
     background-color: #00FF00;
+    padding: .3rem .5rem;
     outline: none;
     border: none;
     border-radius: 1rem;
@@ -133,7 +134,6 @@ body {
 #remove,
 #read {
     border: 2px solid rgba(255, 255, 255, .6);
-    color: wih;
 }
 
 /* Input Popup */
